syntax = "proto3";

package transport_base;

message Rgb {
    uint32 r = 1;
    uint32 g = 2;
    uint32 b = 3;    
}

message Rgba {
    uint32 r = 1;
    uint32 g = 2;
    uint32 b = 3;   
    double opacity = 4;
}

message Color {
    oneof color {    
    string string_name = 1; 
    Rgb rgb = 2;
    Rgba rgba = 3;    
    }
}